tdf#118042: fix crash on Target box in Hyperlink dialog

Change-Id: I493faf6e94c1a130b2bd88b6b8c33d6deb6bc268
Reviewed-on: https://gerrit.libreoffice.org/55443
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>